# cs350cprojects

homeworks/: Makefile
homeworks/hw1/: CMakeLists.txt  Makefile  tak  tak.s  tarai.c  tarai.s
homeworks/hw2/: tak.c  tak2  tak3  tarai-O2.s  tarai-O3.s  tarai.c
homeworks/hw3/: a.out  clock.c  matrix.c  mmult.c  mmult.h
homeworks/hw4/: CMakeLists.txt  Graph.cpp  Graph.h  Makefile  bitmatrix.c  bitmatrix.h  bitops.c  bitops.h  main.c  main.cpp  test  test.c  testdata1.txt  testdata2.txt  testdata3.txt  testdata5.txt  testdata6.txt
homeworks/hw6/: CMakeLists.txt  Makefile  README.md  args.c  args.h  assembler.c  instructions.c  instructions.h  map.c  map.h  parser.h  vector.c  vector.h
homeworks/hw6/include/: args.h  asmcode.h  instruction.h  instruction_definitions.h  literal.h  parser.h  parsing_functions.h  tree.h
homeworks/hw6/programs/: quicksort.ys  test1.y86  test2.y86  test3.y86  test4.y86
homeworks/hw6/src/: args.cpp  asmcode.cpp  assembler.cpp  instruction.cpp  literal.cpp  parser.cpp  tree.cpp
homeworks/hw8/: alu.c
lab0/: clock.h  fcyc.c  fcyc.h  memory-format.csv  memory-mountain.ps  mountain  mountain.c  totable.py
lab1/: clock.c  fcyc.c  fcyc.h  mem-chase.c  mem-chase.h
lab2/: CMakeLists.txt  README.md  array.c  array.h  defines.h  main.c  parser.c  parser.h  parsing_functions.h  simulator  simulator.c  simulator.h  state.c  state.h
lab2/programs/: adder.yo  adder.ys  call.yo  call.ys  fibonacci.yo  fibonacci.ys  hw6  quicksort.yo  quicksort.ys  stacktest.yo  (+1 more)
lab3/: README  y86-pipeline-lab.c
memorymountain/: memory.csv  out.txt
